<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_pharmacy"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/personal_pharmacy" />
        <item
            android:id="@+id/nav_register_med"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/register_med" />
        <item
            android:id="@+id/nav_needs"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/needs" />
        <item
            android:id="@+id/nav_donations"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/donations" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_communication"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/communication" />
        </menu>
    </item>

</menu>