<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fillViewport="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".Register">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp"
            android:theme="@style/MyEditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username">

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp"
            android:theme="@style/MyEditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone">

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp"
            android:theme="@style/MyEditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email">

        <EditText
            android:id="@+id/birth_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp"
            android:theme="@style/MyEditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pickup_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birth_date">

        <EditText
            android:id="@+id/pickup_addr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pickup_address"
            android:inputType="textPostalAddress"
            android:maxLength="70"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp"
            android:theme="@style/MyEditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/sexGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickup_addr"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:theme="@style/MyEditTextTheme">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />
    </RadioGroup>

    </RelativeLayout>
</LinearLayout>